--- a/Views/edit.ejs
+++ b/Views/edit.ejs
@@ -9,10 +9,11 @@
     <title>Add new Todo </title>
 </head>
 <body>
-   <h1>Edit the Todo</h1>
+   <h1>TODO APPLICATION</h1>
    
    <form method="POST" action="/todo/<%= find._id %>/edit?method_override=PUT" class="form">
-    <div >
+    <h2>Edit TODO</h2>
+      <div >
    <label for="title">title :</label>
    <input type="text" name="title" id="title" class="title" value="<%= find.title %> ">
 </div>
